--- a/src/components/PanelComponents/style.css
+++ b/src/components/PanelComponents/style.css
@@ -1,3 +1,12 @@
 .divStyle{
     margin-left: 20px;
 }
+.restaurantImage{
+    width: 330px;
+    margin-left: -20px;
+}
+
+.MuiToolbar-gutters{
+background-color:white;
+color: black;
+}
